--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,11 @@ body {
   margin-left: auto;
 }
 
+em {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 
 span.ping {
   margin-right: 15px;
